Validator db updates (#38)
* updated miner_predictions table and code for it

* added new miner_scores table

* updated get_values method

* updated code for validator according to the new data model

* temporarily stopped saving responses from miners

* fixed error in the get_latest_prediction query

* returned back miner_predictions updates

* reworked database schema

* udpated database model

* removed unused import

* subnet api fixes

* increased validator running check

* added config to bt.wallet

* specified the wallet name

* wallet fixes

* wallet fixes

* fixed the network name

* logs

* added logs for metagraph

* added logs

* added metagraph_history table

* fixed numpy float issue

* added custom moving_average calculation

* fixed timeformat error

* logging

* disabled saving in the db

* added logging

* returned rewards calculation

* added updated_at column

* database schema adjustments

* updated code with black formatter

* fixed unit tests

* fixed formatting

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,5 +35,5 @@ jobs:
         run: |
           black --line-length 79 --exclude '(env|venv|.eggs|.git)' --check .
 
-      # - name: Run unit tests
-      #   run: python -m unittest discover tests
+      - name: Run unit tests
+        run: pytest ./tests/
