--- a/min_compute.yml
+++ b/min_compute.yml
@@ -14,23 +14,23 @@ compute_spec:
   miner:
 
     cpu:
-      min_cores: 4            # Minimum number of CPU cores
+      min_cores: 2            # Minimum number of CPU cores
       min_speed: 2.5          # Minimum speed per core (GHz)
-      recommended_cores: 8    # Recommended number of CPU cores
+      recommended_cores: 4    # Recommended number of CPU cores
       recommended_speed: 3.5  # Recommended speed per core (GHz)
       architecture: "x86_64"  # Architecture type (e.g., x86_64, arm64)
 
     gpu:
-      required: True                       # Does the application require a GPU?
-      min_vram: 8                          # Minimum GPU VRAM (GB)
-      recommended_vram: 24                 # Recommended GPU VRAM (GB)
-      cuda_cores: 1024                     # Minimum number of CUDA cores (if applicable)
-      min_compute_capability: 6.0          # Minimum CUDA compute capability
-      recommended_compute_capability: 7.0  # Recommended CUDA compute capability
-      recommended_gpu: "NVIDIA A100"       # provide a recommended GPU to purchase/rent
+      required: False                       # Does the application require a GPU?
+      min_vram: 0                           # Minimum GPU VRAM (GB)
+      recommended_vram: 0                   # Recommended GPU VRAM (GB)
+      cuda_cores: 0                         # Minimum number of CUDA cores (if applicable)
+      min_compute_capability: 0.0           # Minimum CUDA compute capability
+      recommended_compute_capability: 0.0   # Recommended CUDA compute capability
+      recommended_gpu: "N/A"                # provide a recommended GPU to purchase/rent
 
     memory:
-      min_ram: 16          # Minimum RAM (GB)
+      min_ram: 8           # Minimum RAM (GB)
       min_swap: 4          # Minimum swap space (GB)
       recommended_swap: 8  # Recommended swap space (GB)
       ram_type: "DDR4"     # RAM type (e.g., DDR4, DDR3, etc.)
@@ -49,23 +49,23 @@ compute_spec:
   validator:
 
     cpu:
-      min_cores: 4            # Minimum number of CPU cores
+      min_cores: 2            # Minimum number of CPU cores
       min_speed: 2.5          # Minimum speed per core (GHz)
-      recommended_cores: 8    # Recommended number of CPU cores
+      recommended_cores: 4    # Recommended number of CPU cores
       recommended_speed: 3.5  # Recommended speed per core (GHz)
       architecture: "x86_64"  # Architecture type (e.g., x86_64, arm64)
 
     gpu:
-      required: True                       # Does the application require a GPU?
-      min_vram: 8                          # Minimum GPU VRAM (GB)
-      recommended_vram: 24                 # Recommended GPU VRAM (GB)
-      cuda_cores: 1024                     # Minimum number of CUDA cores (if applicable)
-      min_compute_capability: 6.0          # Minimum CUDA compute capability
-      recommended_compute_capability: 7.0  # Recommended CUDA compute capability
-      recommended_gpu: "NVIDIA A100"       # provide a recommended GPU to purchase/rent
+      required: False                       # Does the application require a GPU?
+      min_vram: 0                           # Minimum GPU VRAM (GB)
+      recommended_vram: 0                   # Recommended GPU VRAM (GB)
+      cuda_cores: 0                         # Minimum number of CUDA cores (if applicable)
+      min_compute_capability: 0.0           # Minimum CUDA compute capability
+      recommended_compute_capability: 0.0   # Recommended CUDA compute capability
+      recommended_gpu: "N/A"                # provide a recommended GPU to purchase/rent
 
     memory:
-      min_ram: 16          # Minimum RAM (GB)
+      min_ram: 8           # Minimum RAM (GB)
       min_swap: 4          # Minimum swap space (GB)
       recommended_swap: 8  # Recommended swap space (GB)
       ram_type: "DDR4"     # RAM type (e.g., DDR4, DDR3, etc.)
